Update Cloud from source install info
https://github.com/bibledit/cloud/issues/989

--- a/help/installcloudsource.html
+++ b/help/installcloudsource.html
@@ -51,8 +51,8 @@
 <br>
 
 <p>➤ translate("Install the software Bibledit relies on:")</p>
-<p class="debian ubuntu"><code>sudo apt install build-essential autotools-dev autoconf autoconf-archive git zip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot libxml2-dev libutf8proc-dev libgumbo-dev libtidy-dev libpugixml-dev</code></p>
-<p class="centos"><code>sudo dnf install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel pugixml-devel</code></p>
+<p class="debian ubuntu"><code>sudo apt install build-essential autotools-dev autoconf autoconf-archive git zip unzip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot libxml2-dev libutf8proc-dev libgumbo-dev libtidy-dev libpugixml-dev gzip tar</code></p>
+<p class="centos"><code>sudo dnf install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel pugixml-devel gzip tar</code></p>
 
 <br>
 
