--- a/help/changelog.html
+++ b/help/changelog.html
@@ -140,7 +140,7 @@
 <p>5.0.934: Exporting invalid UTF-8 text gets recorded in the journal.</p>
 <p>5.0.933: Transpose and fix double spaces in footnotes and cross references.</p>
 <p>5.0.932: Translate standardized focused verse from Paratext to local verse mapping.</p>
-<p>5.0.932: Forwards Bible from editone to editone2 in a workspace.</p>
+<p>5.0.932: Forwards Bible from editone to editone in a workspace.</p>
 <p>5.0.929: Runs on Mac M1 with arm64 processor.</p>
 <p>5.0.929: Optionally coloured note status labels.</p>
 <p>5.0.928: Moves notes from the non-editable prefix to the very end in the verse editor.</p>
