--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.022: The word-level attributes are editable in all three Bible editors.</p>
 <p>5.1.022: The word-level attributes are no longer visible in the verse editor and the chapter editor.</p>
 <p>5.1.022: Safer calls of commandline tools.</p>
 <p>5.1.021: Support importing multiple files in one go into a Bible.</p>
