--- a/help/installcloudsource.html
+++ b/help/installcloudsource.html
@@ -5,6 +5,8 @@
 <button id="debian">Debian</button>
 <button id="ubuntu">Ubuntu</button>
 <button id="centos">CentOS</button>
+<button id="redhat">RedHat</button>
+<button id="alma">Alma</button>
 </p>
 <p>translate("Then follow the steps below to install Bibledit Cloud.")</p>
 
@@ -22,6 +24,14 @@
       hide_all();
       $(".centos").show();
     });
+    $("#redhat").click(function(){
+      hide_all();
+      $(".redhat").show();
+    });
+    $("#alma").click(function(){
+      hide_all();
+      $(".alma").show();
+    });
     hide_all();
     $(".debian").show();
   });
@@ -29,6 +39,8 @@
     $(".debian").hide();
     $(".ubuntu").hide();
     $(".centos").hide();
+    $(".redhat").hide();
+    $(".alma").hide();
   };
 </script>
 
@@ -40,9 +52,9 @@
 
 <p>➤ translate("Update the software sources.")</p>
 <p class="debian ubuntu"><code>sudo apt update</code></p>
-<p class="centos"><code>sudo dnf update</code></p>
+<p class="centos redhat alma"><code>sudo dnf update</code></p>
 
-<div class="centos">
+<div class="centos redhat alma">
 <br>
 <p>➤ translate("Install and enable extra package repositories.")</p>
 <p><code>sudo dnf install epel-release</code></p>
@@ -52,7 +64,7 @@
 
 <p>➤ translate("Install the software Bibledit relies on:")</p>
 <p class="debian ubuntu"><code>sudo apt install build-essential autotools-dev autoconf autoconf-archive git zip unzip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot libxml2-dev libutf8proc-dev libgumbo-dev libtidy-dev libpugixml-dev gzip tar</code></p>
-<p class="centos"><code>sudo dnf install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel pugixml-devel gzip tar</code></p>
+<p class="centos redhat alma"><code>sudo dnf install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel pugixml-devel gzip tar</code></p>
 
 <br>
 
@@ -87,7 +99,7 @@ translate("This takes a while.")
 translate("There will be many technical messages, but there should be no errors.")
 </p>
 
-<div class="centos">
+<div class="centos redhat alma">
   <br>
   <p>➤ translate("Open port 8080 in the firewall.")</p>
   <p><code>sudo firewall-cmd --zone=public --add-port=8080/tcp --permanent</code></p>
