--- a/styles/sheetm.html
+++ b/styles/sheetm.html
@@ -2,8 +2,8 @@
 <table>
   <thead>
     <tr>
-      <td>translate("Style")</td>
-      <td>translate("Name")</td>
+      <td><b>translate("Style")</b></td>
+      <td><b>translate("Name")</b></td>
       <td></td>
     </tr>
   </thead>
