Keeps selected Bible
The verse editor preview sets the active Bible to the Bible loaded in that editor.
The editor switcher in the Bible editors sets the active Bible to the Bible loaded in the editor.
https://github.com/bibledit/cloud/issues/1003

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.023: The verse editor preview sets the active Bible to the Bible loaded in that editor.</p>
+<p>5.1.023: The editor switcher in the Bible editors sets the active Bible to the Bible loaded in the editor.</p>
 <p>5.1.023: Embed the gumbo-parser code.</p>
 <p>5.1.023: Bibledit for iOS can download and share exports.</p>
 <p>5.1.022: Native Bibledit for Windows ARM for better performance and battery life.</p>
