Move markers h h1 h2 h3 to styles v2
https://github.com/bibledit/cloud/issues/990

--- a/styles/view2.html
+++ b/styles/view2.html
@@ -20,6 +20,35 @@
 </tr>
 <!-- #ENDZONE starts_new_page -->
 
+<!-- #BEGINZONE on_left_page -->
+<tr>
+  <td>translate("Capability")</td>
+  <td>
+    <input type="checkbox" name="on_left_page" onchange="checkbox_v2(this, '##sheet##', '##style##')" ##on_left_page## />
+    translate("Put this on the left page")
+  </td>
+</tr>
+<!-- #ENDZONE on_left_page -->
+
+<!-- #BEGINZONE on_right_page -->
+<tr>
+  <td>translate("Capability")</td>
+  <td>
+    <input type="checkbox" name="on_right_page" onchange="checkbox_v2(this, '##sheet##', '##style##')" ##on_right_page## />
+    translate("Put this on the right page")
+  </td>
+</tr>
+<!-- #ENDZONE on_right_page -->
+
+<!-- #BEGINZONE deprecated -->
+<tr>
+  <td>translate("Notice")</td>
+  <td>
+    translate("This style is deprecated in the current USFM standard")
+  </td>
+</tr>
+<!-- #ENDZONE deprecated -->
+
 </table>
 
 <link rel="stylesheet" type="text/css" href="../coloris/coloris.min.css">
