Add documentation llinks to styles v2
https://github.com/bibledit/cloud/issues/990

--- a/styles/view2.html
+++ b/styles/view2.html
@@ -49,6 +49,13 @@
 </tr>
 <!-- #ENDZONE deprecated -->
 
+<tr>
+  <td>translate("Documentation")</td>
+  <td>
+    <a href="##doc##" ##external##>##doc##</a>
+  </td>
+</tr>
+
 </table>
 
 <link rel="stylesheet" type="text/css" href="../coloris/coloris.min.css">
