Better support for \ca in the visual editors
https://github.com/bibledit/cloud/issues/990

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.024: Better support for the \ca markup.</p>
 <p>5.1.023: If a Bible is specified in a workspace, activating that workspace sets the first Bible in that workspace as the active Bible.</p>
 <p>5.1.023: The verse editor preview sets the active Bible to the Bible loaded in that editor.</p>
 <p>5.1.023: The editor switcher in the Bible editors sets the active Bible to the Bible loaded in the editor.</p>
