--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,7 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p>5.1.024: Fetches Studylight content securely.</p>
-<p>5.1.024: Support for the \ie markup.</p>
+<p>5.1.024: Support for the \ie and \usfm markup.</p>
 <p>5.1.024: Better support for the \ca markup.</p>
 <p>5.1.023: If a Bible is specified in a workspace, activating that workspace sets the first Bible in that workspace as the active Bible.</p>
 <p>5.1.023: The verse editor preview sets the active Bible to the Bible loaded in that editor.</p>
