--- a/styles/view2.html
+++ b/styles/view2.html
@@ -10,6 +10,120 @@
 
 <tr><td>translate("Description")</td><td><a href="view2?sheet=##sheet##&style=##style##&info=">##info##</a></td></tr>
 
+<!-- #BEGINZONE paragraph -->
+
+<tr>
+  <td>translate("Font size")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="fontsize" value="##fontsize##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="5" max="50" />
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Italic")</td>
+  <td>
+    <form action="" method="POST">
+      <select name="italic" onchange="this.form.submit()">##italic##</select>
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Bold")</td>
+  <td>
+    <form action="" method="POST">
+      <select name="bold" onchange="this.form.submit()">##bold##</select>
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Underline")</td>
+  <td>
+    <form action="" method="POST">
+      <select name="underline" onchange="this.form.submit()">##underline##</select>
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Small caps")</td>
+  <td>
+    <form action="" method="POST">
+      <select name="smallcaps" onchange="this.form.submit()">##smallcaps##</select>
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Text alignment")</td>
+  <td>
+    <form action="" method="POST">
+      <select name="textalignment" onchange="this.form.submit()">##textalignment##</select>
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Space before")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="spacebefore" value="##spacebefore##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      translate("mm")
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Space after")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="spaceafter" value="##spaceafter##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      translate("mm")
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Left margin")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="leftmargin" value="##leftmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      translate("mm")
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("Right margin")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="rightmargin" value="##rightmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="-100" max="100" />
+      translate("mm")
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<tr>
+  <td>translate("First line indent")</td>
+  <td>
+    <form action="" method="POST">
+      <input type="number" name="firstlineindent" value="##firstlineindent##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="-100" max="100" />
+      translate("mm")
+      <input type="submit" value="translate("Submit")" />
+    </form>
+  </td>
+</tr>
+
+<!-- #ENDZONE paragraph -->
+
 <!-- #BEGINZONE character -->
 
 <tr>
