--- a/styles/view2.html
+++ b/styles/view2.html
@@ -71,7 +71,7 @@
   <td>translate("Space before")</td>
   <td>
     <form action="" method="POST">
-      <input type="number" name="spacebefore" value="##spacebefore##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      <input type="number" name="spacebefore" value="##spacebefore##" onchange="this.form.submit()" onsubmit="this.form.submit()" step="0.1" min="0" max="100" />
       translate("mm")
       <input type="submit" value="translate("Submit")" />
     </form>
@@ -82,7 +82,7 @@
   <td>translate("Space after")</td>
   <td>
     <form action="" method="POST">
-      <input type="number" name="spaceafter" value="##spaceafter##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      <input type="number" name="spaceafter" value="##spaceafter##" onchange="this.form.submit()" onsubmit="this.form.submit()" step="0.1" min="0" max="100" />
       translate("mm")
       <input type="submit" value="translate("Submit")" />
     </form>
@@ -93,7 +93,7 @@
   <td>translate("Left margin")</td>
   <td>
     <form action="" method="POST">
-      <input type="number" name="leftmargin" value="##leftmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="0" max="100" />
+      <input type="number" name="leftmargin" value="##leftmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" step="0.1" min="0" max="100" />
       translate("mm")
       <input type="submit" value="translate("Submit")" />
     </form>
@@ -104,7 +104,7 @@
   <td>translate("Right margin")</td>
   <td>
     <form action="" method="POST">
-      <input type="number" name="rightmargin" value="##rightmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="-100" max="100" />
+      <input type="number" name="rightmargin" value="##rightmargin##" onchange="this.form.submit()" onsubmit="this.form.submit()" step="0.1" min="-100" max="100" />
       translate("mm")
       <input type="submit" value="translate("Submit")" />
     </form>
@@ -115,7 +115,7 @@
   <td>translate("First line indent")</td>
   <td>
     <form action="" method="POST">
-      <input type="number" name="firstlineindent" value="##firstlineindent##" onchange="this.form.submit()" onsubmit="this.form.submit()" min="-100" max="100" />
+      <input type="number" name="firstlineindent" value="##firstlineindent##" onchange="this.form.submit()" onsubmit="this.form.submit()" step="0.1" min="-100" max="100" />
       translate("mm")
       <input type="submit" value="translate("Submit")" />
     </form>
