Can edit the 'c' (chapter) markup
https://github.com/bibledit/cloud/issues/990

--- a/styles/view2.html
+++ b/styles/view2.html
@@ -213,6 +213,16 @@
 </tr>
 <!-- #ENDZONE on_right_page -->
 
+<!-- #BEGINZONE at_first_verse -->
+<tr>
+  <td>translate("Capability")</td>
+  <td>
+    <input type="checkbox" name="at_first_verse" onchange="checkbox_v2(this, '##sheet##', '##style##')" ##at_first_verse## />
+    translate("Output this at the first verse")
+  </td>
+</tr>
+<!-- #ENDZONE on_right_page -->
+
 <!-- #BEGINZONE deprecated -->
 <tr>
   <td>translate("Notice")</td>
