--- a/styles/view2.html
+++ b/styles/view2.html
@@ -221,7 +221,14 @@
     translate("Output this at the first verse")
   </td>
 </tr>
-<!-- #ENDZONE on_right_page -->
+<!-- #ENDZONE at_first_verse -->
+
+<!-- #BEGINZONE has_endmarker -->
+<tr>
+  <td>translate("Capability")</td>
+  <td>translate("This style has an end marker")</td>
+</tr>
+<!-- #ENDZONE has_endmarker -->
 
 <!-- #BEGINZONE deprecated -->
 <tr>
