Support for marker "\r ".
https://github.com/bibledit/cloud/issues/990

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.025: Support for USFM marker \pr Right aligned paragraph.</p>
 <p>5.1.024: Fetches Studylight content securely.</p>
 <p>5.1.024: Support for the \ie and \usfm markup.</p>
 <p>5.1.024: Better support for the \ca markup.</p>
