--- a/help/changelog.html
+++ b/help/changelog.html
@@ -11,7 +11,7 @@
 <p>5.1.023: Embed the gumbo-parser code.</p>
 <p>5.1.023: Bibledit for iOS can download and share exports.</p>
 <p>5.1.022: Native Bibledit for Windows ARM for better performance and battery life.</p>
-<p>5.1.022: Install steps for the Cloud om more Linux distros.</p>
+<p>5.1.022: Install steps for the Cloud on more Linux distros.</p>
 <p>5.1.022: The word-level attributes are editable in all three Bible editors.</p>
 <p>5.1.022: The word-level attributes are no longer visible in the verse editor and the chapter editor.</p>
 <p>5.1.022: Safer calls of commandline tools.</p>
