Can add marker to stylesheet
The marker to be added will be based on one of the standard markers.
https://github.com/bibledit/cloud/issues/994

--- a/styles/view.html
+++ b/styles/view.html
@@ -6,9 +6,9 @@
 
 <tr><td>translate("Style")</td><td>##style## (##type##)</td></tr>
 
-<tr><td>translate("Name")</td><td><a href="view2?sheet=##sheet##&style=##style##&name=">##name##</a></td></tr>
+<tr><td>translate("Name")</td><td><a href="view?sheet=##sheet##&style=##style##&name=">##name##</a></td></tr>
 
-<tr><td>translate("Description")</td><td><a href="view2?sheet=##sheet##&style=##style##&info=">##info##</a></td></tr>
+<tr><td>translate("Description")</td><td><a href="view?sheet=##sheet##&style=##style##&info=">##info##</a></td></tr>
 
 <!-- #BEGINZONE paragraph -->
 
@@ -308,7 +308,7 @@
 }
 </style>
 <script type="text/javascript" src="../coloris/coloris.min.js"></script>
-<script type="text/javascript" src="view2.js?##VERSION##"></script>
+<script type="text/javascript" src="view.js?##VERSION##"></script>
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
 <script type="text/javascript">
 var sheet = "##sheet##";
