--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.026: The visual editors no longer add closing markup like \xt when not needed.</p>
 <p>5.1.026: The visual editors handle milestones in USFM better.</p>
 <p>5.1.026: Proper whitespace normalization on USFM import.</p>
 <p>5.1.026: Proper application and removal of embedded character styles.</p>
