--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.027: Typing text in verse editor in chapter 0 has improved a bit.</p>
 <p>5.1.027: The Bible editors refuse to save chapter data with incorrect chapter markup.</p>
 <p>5.1.026: The visual editors no longer add closing markup like \xt when not needed.</p>
 <p>5.1.026: The visual editors handle standard and custom milestones in USFM better.</p>
