--- a/personalize/index.html
+++ b/personalize/index.html
@@ -343,6 +343,15 @@ translate("Enable spell check in the Bible editors.")
 <!-- #ENDZONE advancedmode -->
 
 
+<!-- #BEGINZONE advancedmode -->
+<br>
+<p>
+<input type="checkbox" name="navigationarrows" onchange="checkbox_v2(this)" ##navigationarrows## />
+translate("Show arrows in the passage navigator for previous and next book and chapter and verse.")
+</p>
+<!-- #ENDZONE advancedmode -->
+
+
 <br>
 <script type="text/javascript" src="index.js?##VERSION##"></script>
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
