Move several links from http to https
These links are not scrapers but other links.
https://github.com/bibledit/cloud/issues/1010

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -767,7 +767,7 @@
 <p>Clients can download extra fonts from the Cloud.</p>
 <p>Smart nightly exports only export when the Bible text was updated.</p>
 <p>Note checksum cache for faster note synchronization in case of thousands of notes.</p>
-<p>One-click submission of Bible to the Bible Drop Box at http://freely-given.org/Software/BibleDropBox.</p>
+<p>One-click submission of Bible to the Bible Drop Box at https://freely-given.org/Software/BibleDropBox.</p>
 <p>Improved caching of the NET Bible.</p>
 <p>Central cache for external resources for clustered Bibledit Cloud installations.</p>
 <p>Watchdog timers on all sync actions for increased robustness on bad networks.</p>
