--- a/manage/exports.html
+++ b/manage/exports.html
@@ -169,7 +169,7 @@ translate("The help within the Online Bible provides more information about crea
 
 <p>
 translate("The Bible Drop Box provides many additional export formats.")
-<a href="http://freely-given.org/Software/BibleDropBox" ##external##>translate ("Visit the Bible Drop Box for all the options.")</a>
+<a href="https://freely-given.org/Software/BibleDropBox" ##external##>translate ("Visit the Bible Drop Box for all the options.")</a>
 </p>
 <p><a href="https://github.com/bibledit/converters" ##external##>translate("There are more export formats through the BibleMultiConverter.")</a></p>
 
