--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.028: Update resource downloader to match the new NET Bible data format.</p>
 <p>5.1.028: Setting for showing navigation arrows to book and chapter and verse.</p>
 <p>5.1.028: Typing text in verse editor in chapter 0 has improved a bit.</p>
 <p>5.1.027: The Bible editors refuse to save chapter data with incorrect chapter markup.</p>
