--- a/styles/view.html
+++ b/styles/view.html
@@ -174,12 +174,12 @@
 <!-- #BEGINZONE character_color -->
 <tr>
   <td>translate("Foreground color")</td>
-  <td><input id="fgcolor" type="text" class="coloris" value="##foregroundcolor##"></td>
+  <td><input id="fgcolor" type="color" value="##foregroundcolor##"></td>
 </tr>
 
 <tr>
   <td>translate("Background color")</td>
-  <td><input id="bgcolor" type="text" class="coloris" value="##backgroundcolor##"></td>
+  <td><input id="bgcolor" type="color" value="##backgroundcolor##"></td>
 </tr>
 <!-- #ENDZONE character_color -->
 
@@ -298,16 +298,6 @@
 
 </table>
 
-<link rel="stylesheet" type="text/css" href="../coloris/coloris.min.css">
-<style type="text/css">
-.clr-field button {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  border-style: solid;
-}
-</style>
-<script type="text/javascript" src="../coloris/coloris.min.js"></script>
 <script type="text/javascript" src="view.js?##VERSION##"></script>
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
 <script type="text/javascript">
