--- a/checks/index.html
+++ b/checks/index.html
@@ -7,12 +7,12 @@
 <br>
 <a id="help"></a>
 <p>translate("The page displays a list of results of running the checks.")</p>
-<p>translate("Click ✔ to suppress the entry.")</p>
-<p>
-  translate("Click 🗑 to remove the entry for just now.")
-  translate("It will be back after running the checks again, unless the text of the Bible has been corrected.")
-</p>
 <p>translate("Click a passage to open it in the Bible text editor.")</p>
+<p>translate("Click approve to suppress the entry.")</p>
+<p>
+translate("Click delete to remove the entry for just now.")
+translate("It will be back after running the checks again, unless the text of the Bible has been corrected.")
+</p>
 <!-- #BEGINZONE cannot_enable -->
 <p>translate("The Manager can enable or disable checks.")</p>
 <!-- #ENDZONE cannot_enable -->
