Delete all checking results at once
https://github.com/bibledit/cloud/issues/1008

--- a/checks/index.html
+++ b/checks/index.html
@@ -13,6 +13,7 @@
 translate("Click delete to remove the entry for just now.")
 translate("It will be back after running the checks again, unless the text of the Bible has been corrected.")
 </p>
+<p><a href="?deleteall">translate("Delete all entries.")</a></p>
 <!-- #BEGINZONE cannot_enable -->
 <p>translate("The Manager can enable or disable checks.")</p>
 <!-- #ENDZONE cannot_enable -->
