--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.030: Can delete checking results by group.</p>
+<p>5.1.030: Can delete all checking results at once.</p>
 <p>5.1.028: Update resource downloader to match the new NET Bible data format.</p>
 <p>5.1.028: Setting for showing navigation arrows to book and chapter and verse.</p>
 <p>5.1.028: Typing text in verse editor in chapter 0 has improved a bit.</p>
