Add certificates.sh script for managing SSL certificates
Introduces config/certificates.sh to automate copying Let's Encrypt certificates into the Bibledit Cloud config directory, addressing permission issues. Updated help/config.html with instructions for using the script.
https://github.com/bibledit/cloud/issues/1012

--- a/help/config.html
+++ b/help/config.html
@@ -94,6 +94,12 @@ To set the permissions correct, run the following command as user root:
   $ chmod ugo+r /var/bibledit/bibledit-cloud/config/*.pem
 </pre>
 <p>
+There is a script in the above config directory.
+It assists with steps 3 and 4 above.
+This script is "certificates.sh".
+Run it as the root user to copy the certificates to Bibledit.
+</p>
+<p>
 Step 5: Restart Bibledit Cloud.
 After the certificates have been copied into place,
 restart Bibledit Cloud.
