--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.030: Can create USFM3 markers that span columns in tables.</p>
 <p>5.1.030: Can delete checking results by group.</p>
 <p>5.1.030: Can delete all checking results at once.</p>
 <p>5.1.028: Update resource downloader to match the new NET Bible data format.</p>
