--- a/developer/index.html
+++ b/developer/index.html
@@ -6,7 +6,7 @@
 <p><a href="?debug=parsehebrewlexicon">Parse Open Scriptures Hebrew Lexicon into a database and block till ready</a></p>
 <p><a href="?debug=crash">Cause a crash</a></p>
 <p><a href="javascript:;" onclick="notifyItSuccess ('This is a notification');">Show notification</a></p>
-<p><a href="?debug=receive">Receive email now</a></p>
+<p><a href="?debug=sendreceive">Send en receive email now</a></p>
 <p><a href="?debug=ipv6">Connect to http://ipv6.google.com</a></p>
 <p><a href="?debug=ipv6s">Connect to https://ipv6.google.com</a></p>
 <p><a href="?debug=maintain">Database maintenance</a></p>
@@ -17,6 +17,7 @@
 <p><a href="?debug=accordance">Reference for Accordance</a></p>
 <p><a href="?debug=expirefreeindonesian">Run the task to expire free accounts on the Indonesian Cloud</a></p>
 <p><a href="?debug=changes">Import changes into Bible</a></p>
+<p>##selector##</p>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
