Refactor versification selection in settings
Replaces the versification system selection in bible settings with a reusable select dialog component. Updates the HTML to use the new select UI.
https://github.com/bibledit/cloud/issues/1017

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -5,14 +5,9 @@
 
 <!-- #BEGINZONE manager -->
 <p>
-  translate("Versification system"):
-  <!-- #BEGINZONE write_access -->
-    <a href="settings?bible=##bible##&versification=">
-  <!-- #ENDZONE write_access -->
-  ##versification##
-  <!-- #BEGINZONE write_access -->
-  </a>
-  <!-- #ENDZONE write_access -->
+translate("Versification system")
+##versification##
+translate("The number of chapters in a book and the number of verses in a chapter.")
 </p>
 <!-- #ENDZONE manager -->
 
