Refactor and extend dialog select component
Replaces the old dialog::select::create with ajax and form variants, supporting both AJAX and form-based select elements with before/after info. Updates usage in settings and developer pages, adds dialog/select.js for AJAX handling, and updates project and package files accordingly.
https://github.com/bibledit/cloud/issues/1017

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -58,7 +58,7 @@ translate("The public can give feedback")
 <input type="checkbox" name="rss" onchange="checkbox_v2(this, '##bible##')" ##rss## />
 <a href="/##systemindex##">translate("Send the changes to the RSS feed")</a>
 </p>
-<p><a href="?bible=##bible##&resource=">translate("Import text from a resource")</a></p>
+<p>##resource##</p>
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
 
