--- a/developer/index.html
+++ b/developer/index.html
@@ -16,7 +16,8 @@
 </p>
 <p><a href="?debug=accordance">Reference for Accordance</a></p>
 <p><a href="?debug=changes">Import changes into Bible</a></p>
-<p>##selector##</p>
+<p>##selectorajax##</p>
+<p>##selectorform##</p>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
