Refactor stylesheet editing selection in settings
Replaces the manual dialog for selecting the editor stylesheet with a reusable AJAX-based select dialog. Updates the settings page to display the new selection UI and improves maintainability by consolidating logic.
https://github.com/bibledit/cloud/issues/1017

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -62,16 +62,7 @@ translate("The public can give feedback")
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
 
-<p>
-translate("Stylesheet for editing"):
-<!-- #BEGINZONE privilege_stylesheet -->
-<a href="settings?bible=##bible##&stylesheetediting=">
-  <!-- #ENDZONE privilege_stylesheet -->
-  ##stylesheetediting##
-  <!-- #BEGINZONE privilege_stylesheet -->
-</a>
-<!-- #ENDZONE privilege_stylesheet -->
-</p>
+<p>##stylesheetediting##</p>
 <p>
 translate("Stylesheet for export"):
 <!-- #BEGINZONE privilege_stylesheet -->
