Refactor export stylesheet selection in settings
Replaces the manual export stylesheet selection dialog with a reusable AJAX-based select dialog in the settings page. Updates the HTML to display the new select component and removes the old link-based selection logic.
https://github.com/bibledit/cloud/issues/1017

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -63,16 +63,7 @@ translate("The public can give feedback")
 <!-- #ENDZONE write_access -->
 
 <p>##stylesheetediting##</p>
-<p>
-translate("Stylesheet for export"):
-<!-- #BEGINZONE privilege_stylesheet -->
-<a href="settings?bible=##bible##&stylesheetexport=">
-  <!-- #ENDZONE privilege_stylesheet -->
-  ##stylesheetexport##
-  <!-- #BEGINZONE privilege_stylesheet -->
-</a>
-<!-- #ENDZONE privilege_stylesheet -->
-</p>
+<p>##stylesheetexport##</p>
 
 
 <!-- #BEGINZONE server -->
