Upgrade Checks Bible selector
https://github.com/bibledit/cloud/issues/1017

--- a/checks/settings.html
+++ b/checks/settings.html
@@ -1,6 +1,6 @@
 <h2>translate("Manage Checks")</h2>
+<p>##bible##</p>
 <p>
-translate("Bible"): <a href="?bible=">##bible##</a>.
 <!-- #BEGINZONE cloud -->
 translate("It will be checked every night.")
 <!-- #ENDZONE cloud -->
