--- a/collaboration/index.html
+++ b/collaboration/index.html
@@ -2,7 +2,7 @@
 <p>translate("Bibledit Cloud can store the Bible text plus all changes in a git repository.")</p>
 <p>translate("This git repository helps with safekeeping the Bible text.")</p>
 <p>translate("It keeps track of all changes made to the Bible text, who made those changes, and when.")</p>
-<p><a href="?object=##object##&select">translate ("Select Bible.")</a></p>
+<p>##selectbible##</p>
 <!-- #BEGINZONE objectactive -->
 <br>
 <p>translate("Bible"): ##object##</p>
