Refactor Bible selection in exports management
Replaces the manual Bible selection dialog with a reusable select dialog component in exports.cpp. Updates the HTML template to display the new Bible selection form and improves success message wording for font export.
https://github.com/bibledit/cloud/issues/1017

--- a/manage/exports.html
+++ b/manage/exports.html
@@ -3,9 +3,8 @@
 <p class="error">##error##</p>
 <p class="success">##success##</p>
 
+<p>##bible##</p>
 <p>
-  translate("Bible"):
-  <a href="?bible=" title="translate("Select another Bible")">##bible##</a>
   <a href="/exports" title="translate("View the exported data")">[translate ("view exports")]</a>
   <a href="?remove=" title="translate("Remove the exported data")">[translate ("remove exports")]</a>
 </p>
