Remove hyphenation tool and related code
Deleted the hyphenation tool, including its source files, menu entries, help documentation, and build system references. Updated documentation and build scripts to reflect the removal. This simplifies the codebase and removes an underused feature.
https://github.com/bibledit/cloud/issues/1017

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.030: Remove the hyphenation tool.</p>
 <p>5.1.030: Can create USFM3 markers that span columns in tables.</p>
 <p>5.1.030: Can delete checking results by group.</p>
 <p>5.1.030: Can delete all checking results at once.</p>
