The <form> element is now inline
The <form> element used to display as a block, but now displays inline. All associated references were updated as well.
https://github.com/bibledit/cloud/issues/1017

--- a/checks/settings.html
+++ b/checks/settings.html
@@ -1,11 +1,11 @@
 <h2>translate("Manage Checks")</h2>
-<p>##bible##</p>
-<p>
-<!-- #BEGINZONE cloud -->
-translate("It will be checked every night.")
-<!-- #ENDZONE cloud -->
-<a href="?run=">translate("Check it now.")</a>
-</p>
+<div>
+  translate("Bible"): ##bible##
+  <!-- #BEGINZONE cloud -->
+  translate("It will be checked every night.")
+  <!-- #ENDZONE cloud -->
+  <a href="?run=">translate("Check it now.")</a>
+</div>
 <p class="error">##error##</p>
 <p class="success">##success##</p>
 <p>##journal##</p>
