--- a/manage/exports.html
+++ b/manage/exports.html
@@ -3,11 +3,11 @@
 <p class="error">##error##</p>
 <p class="success">##success##</p>
 
-<p>##bible##</p>
-<p>
+<div>
+  translate("Bible"): ##bible##
   <a href="/exports" title="translate("View the exported data")">[translate ("view exports")]</a>
   <a href="?remove=" title="translate("Remove the exported data")">[translate ("remove exports")]</a>
-</p>
+</div>
 
 <h3>translate("Web")</h3>
 <p>
