--- a/bb/settings.html
+++ b/bb/settings.html
@@ -58,7 +58,7 @@ translate("The public can give feedback")
 <input type="checkbox" name="rss" onchange="checkbox_v2(this, '##bible##')" ##rss## />
 <a href="/##systemindex##">translate("Send the changes to the RSS feed")</a>
 </p>
-<p>##resource##</p>
+<div>translate("Import text from a resource") ##resource##</div>
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
 
