--- a/developer/index.html
+++ b/developer/index.html
@@ -17,7 +17,7 @@
 <p><a href="?debug=accordance">Reference for Accordance</a></p>
 <p><a href="?debug=changes">Import changes into Bible</a></p>
 <p>##selectorajax##</p>
-<p>##selectorform##</p>
+<div>Info before ##selectorform## and info after</div>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
