Move stylesheet info texts from backend to template
Shifted the informational texts for stylesheet selection from the C++ backend to the HTML template. This centralizes user-facing messages in the template, improving maintainability and localization.
https://github.com/bibledit/cloud/issues/1017

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -62,8 +62,16 @@ translate("The public can give feedback")
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
 
-<p>##stylesheetediting##</p>
-<p>##stylesheetexport##</p>
+<p>
+translate("Stylesheet for editing")
+##stylesheetediting##
+translate("This affects how the Bible text looks in the editor.")
+</p>
+<p>
+translate("Stylesheet for export")
+##stylesheetexport##
+translate("This affects how the Bible text looks when exported.")
+</p>
 
 
 <!-- #BEGINZONE server -->
