Remove info_before and info_after from select dialog
Eliminated the info_before and info_after fields from dialog::select::Settings and their usage in select.cpp, index.cpp, and index.html. This simplifies the select dialog interface and its rendering logic.
https://github.com/bibledit/cloud/issues/1017

--- a/developer/index.html
+++ b/developer/index.html
@@ -17,7 +17,7 @@
 <p><a href="?debug=accordance">Reference for Accordance</a></p>
 <p><a href="?debug=changes">Import changes into Bible</a></p>
 <p>##selectorajax##</p>
-<div>Info before ##selectorform## and info after</div>
+<div>##selectorform##</div>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
