Add auto-submit option to select form and refactor JS
Introduced an auto-submit feature for select forms by adding a new dialog/selectform.js script and updating dialog/select.cpp and dialog/select.h to support the option. Renamed dialog/select.js to dialog/selectajax.js for clarity, updated references accordingly, and registered new files in pkgdata/files.txt and the Xcode project. Updated developer/index.cpp and index.html to demonstrate the new auto-submit select form.
https://github.com/bibledit/cloud/issues/1017

--- a/developer/index.html
+++ b/developer/index.html
@@ -18,6 +18,7 @@
 <p><a href="?debug=changes">Import changes into Bible</a></p>
 <p>##selectorajax##</p>
 <div>##selectorform##</div>
+<div>##selectorautosubmit##</div>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
