Refactor select form API and update user role selection
Refactored dialog::select::form to use a Form struct for configuration instead of a bool for auto_submit. Updated all usages to the new API. Reworked the default new user role selection in manage/users to use AJAX and removed the now-unnecessary users.js and related HTML.
https://github.com/bibledit/cloud/issues/1017

--- a/manage/users.html
+++ b/manage/users.html
@@ -48,9 +48,7 @@
 <h3>translate("Common Settings")</h3>
 <p>
   <label for="defaultacl">translate("New user default access level:")</label>
-  <select id="defaultacl" name="defaultacl" value="##defaultacl##">
-    ##defaultacloptags##
-  </select>
+  ##defaultacl##
 </p>
 
 <br>
@@ -63,4 +61,3 @@
 <!-- #ENDZONE admin_settings -->
 
 <br>
-<script type="text/javascript" src="users.js?##VERSION##"></script>
