Refactor Paratext Bible selection to use dialog::select
Replaces the manual Bible selection dialog in paratext/index.cpp with the reusable dialog::select component.
Updates the HTML template to integrate the new selection form.
https://github.com/bibledit/cloud/issues/1017

--- a/paratext/index.html
+++ b/paratext/index.html
@@ -9,18 +9,15 @@ translate("And changes made in Paratext will be transferred to Bibledit.")
 </p>
 
 <br>
+
+<div>
+translate("Bible in Bibledit"):
+##selectbible##
+<!-- #BEGINZONE bibleactive -->
+<a href="?bible=##bible##&disable=">[translate ("disable")]</a>
+<!-- #ENDZONE bibleactive -->
+</div>
 <table>
-  <tr>
-    <td>translate("Bible in Bibledit")</td>
-    <td>:</td>
-    <td>##bible##</td>
-    <td>
-      <a href="?bible=##bible##&selectbible">[translate ("change")]</a>
-      <!-- #BEGINZONE bibleactive -->
-      <a href="?bible=##bible##&disable=">[translate ("disable")]</a>
-      <!-- #ENDZONE bibleactive -->
-    </td>
-  </tr>
   <!-- #BEGINZONE bibleactive -->
   <tr>
     <td>translate("Paratext Projects folder")</td>
