Refactor Bible selection UI and logic
Replaces the old Bible selection dialog with a new auto-submitting select form using dialog::select. Updates both backend logic in index.cpp and frontend rendering in index.html for a more streamlined Bible selection experience.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -166,10 +166,9 @@ translate("Enable the Styles button in the visual Bible editors.")
 <!-- #BEGINZONE basicmode -->
 
 <br>
-<p>
-translate ("Select the Bible for editing:")
-<a id="bibleselect" href="?changebible=">##bible##</a>.
-</p>
+<div>
+translate ("Select the Bible for editing:") ##bible##.
+</div>
 
 <!-- #BEGINZONE client_connected -->
 <br>
