Refactor resource selection to use dialog forms
Replaces legacy resource selection dialogs with reusable dialog::select forms for all resource types, improving consistency and maintainability. Adds submit button text and URL support to dialog::select, updates HTML to embed forms instead of links, and refactors resource addition logic for extensibility.
https://github.com/bibledit/cloud/issues/1017

--- a/resource/select.html
+++ b/resource/select.html
@@ -1,28 +1,28 @@
 <h3>translate("Resource categories")</h3>
-<p><a href="?page=##page##&type=##type##&bible=">translate("Bibles within Bibledit")</a></p>
-<p><a href="?page=##page##&type=##type##&usfm=">translate("USFM resources")</a></p>
+<div>translate("Bibles within Bibledit") ##bible##</div>
+<div>translate("USFM resources") ##usfm##</div>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&web_orig=">translate("Web resources"): translate ("Original language texts")</a></p>
-<p><a href="?page=##page##&type=##type##&web_bibles=">translate("Web resources"): translate ("Bibles and notes")</a></p>
+<div>translate("Web resources"): translate ("Original language texts") ##web_orig##</div>
+<div>translate("Web resources"): translate ("Bibles and notes") ##web_bibles##</div>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&image=">translate("Image resources")</a></p>
+<div>translate("Image resources") ##image##</div>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&lexicon=">translate("Lexicons")</a></p>
-<p><a href="?page=##page##&type=##type##&sword=">translate("SWORD modules")</a></p>
+<div>translate("Lexicons") ##lexicon##</div>
+<div>translate("SWORD modules") ##sword##</div>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&divider=">translate("Dividers")</a></p>
+<div>translate("Dividers") ##divider##</div>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&biblegateway=">translate("BibleGateway resources")</a></p>
-<p><a href="?page=##page##&type=##type##&studylight=">translate("StudyLight resources")</a></p>
+<div>translate("BibleGateway resources") ##biblegateway##</div>
+<div>translate("StudyLight resources") ##studylight##</div>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&type=##type##&comparative=">translate("Comparative resources")</a></p>
-<p>
-<a href="?page=##page##&type=##type##&translated=">translate("Translated resources")</a>
+<div>translate("Comparative resources") ##comparative##</div>
+<div>
+translate("Translated resources") ##translated##
 <!-- #BEGINZONE setup_translated -->
 <span class="error">
 translate ("Google Translate has not yet been set up.")
 <a href="../system/googletranslate">translate("Ask the administrator to set it up here.")</a>
 </span>
 <!-- #ENDZONE setup_translated -->
-</p>
+</div>
 <h3><a href="##caller##">translate("Cancel")</a></h3>
