Refactor theme selection in personalize page
Replaces the manual theme picker select element with a dynamic form using dialog::select. Updates C++ logic, HTML template, and removes obsolete JavaScript references to 'themepicker'.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -70,12 +70,10 @@ translate("Initial vertical position of the editing cursor in the Bible editors"
 <!-- #ENDZONE bibles -->
 
 <br>
-<p>
-  <label for="themepicker">translate("Choose theme"):</label>
-  <select id="themepicker" name="themepicker" value="##themepicker##">
-    ##themepickeroptags##
-  </select>
-</p>
+<div>
+  <label for="theme">translate("Choose theme"):</label>
+  ##themepicker##
+</div>
 
 <br>
 <p>
