Refactor fast switch visual editors selector
Simplified handling of the fast switch visual editors option in index.cpp by using a settings struct and AJAX-based select rendering. Also updated index.html to use the correct theme variable since it was omitted in the previous commit.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -72,7 +72,7 @@ translate("Initial vertical position of the editing cursor in the Bible editors"
 <br>
 <div>
   <label for="theme">translate("Choose theme"):</label>
-  ##themepicker##
+  ##theme##
 </div>
 
 <br>
